# Wallet3

./: .babelrc  App.js  BottomTabBar.js  ChatUIComponent.js  Image_browser.js  JMessageTestComponent.js  app.json  debug.txt  debug1.txt  debug2.txt  debug4.txt  index.js  index0.js  package-lock.json  package.json
__test__/: helloworld.test.js  mock.test.js  users.test.js
android/: build.gradle  settings.gradle
android/app/: BUCK  build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  fastpbkdf2.cpp  native-lib.cpp  scrypt.cpp  scrypt.h
lib/: CallSmartContractComponent.js  ChatComponent.js  ContractList.js  DeleteWalletComponent.js  DeploySmartContractComponent.js  ErrorBoundaryComponent.js  ExportPrivateKeyComponent.js  ExportSeedComponent.js  GenerateKeystoreComponent.js  GetAddressComponent.js  GetBalanceComponent.js  GetCoinPriceComponent.js  GetTradeComponent.js  ImportKeystoreComponent.js  ImportPrivateKeyComponent.js  ImportSeedPhraseComponent.js  InquireSmartContractComponent.js  ListSmartContractComponent.js  LoadSmartContractComponent.js  LoadSmartContractComponent1.js  MyInfoComponent.js  PurchaseComponent.js  QRScannerComponent.js  TransferComponent.js  WalletManagementComponent.js  WalletManagementComponent1.js  p2msComponent.js
lib_backup/: ChatComponent.js  DeleteWalletComponent.js  ExportPrivateKeyComponent.js  GenerateKeystoreComponent.js  GetBalanceComponent.js  GetCoinPriceComponent.js  ImportSeedPhraseComponent.js  LoadSmartContractComponent.js  PurchaseComponent.js  QRScannerComponent.js  TransferComponent.js
(+65 files in other folders)
